<resources>
    <string name="credits_text" translatable="false"><![CDATA[
            <p>Many people contributed to this project and we did not have to apply force to any of them, this makes us happy. Also those people and their brilliant minds make us happy for</p>
            <ul>
            <li>being awesome</li>
            <li>testing and elimination of bugs</li>
            <li>giving hints and suggestions</li>
            <li>supplying images and ideas</li>
            </ul>
            <p>The best way of saying thank you is by thanking them: thanks.</p>
            <p style="text-align: center;"><u>First but not least, thanks to my bro and brother Fabian! Without you, this would not exist.</u></p>
            <p><strong>Looking for the author of an individual image? Don&#39;t panic! This dialog is made for this case.. and some other cases.</strong></p>
            <ol>
            <li>&nbsp; Non riddle image authors<ul>
            <li>&nbsp;</li>
            </ul>
            </li>
            <li>&nbsp;Testers and contributers<ul>
            <li>&nbsp;</li>
            </ul>
            </li>
            </ol>

        ]]></string>
    <string-array name="donation_google_catalog_values">
        <item>1 Euro</item>
        <item>2 Euros</item>
        <item>3 Euros</item>
        <item>5 Euros</item>
        <item>8 Euros</item>
        <item>13 Euros</item>
    </string-array>
    <string name="store_category_menu">Important things</string>
    <string name="store_category_shop">Shop: %1$d</string>
    <string name="store_category_achievement">Achievements (+%1$d)</string>
    <string name="store_category_about">About &amp; Contact</string>
    <string name="store_category_donate">Donate</string>
    <string name="store_category_credit">Credits</string>
    <string name="riddle_hint_dialog_title">Information</string>
    <string name="riddle_hint_image_refused">Bad image for riddle</string>
    <string name="image_author_name">Author name: %1$s</string>
    <string name="image_author_source">Source: %1$s</string>
    <string name="image_author_license">License: %1$s</string>
    <string name="image_author_details">%1$s</string>
    <string name="app_name">WhatsThat</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="init_skip_state_ready">-testsubject ready-</string>
    <string name="init_skip_state_mandatory_intro_missing">-loading testsubject-</string>
    <string name="init_skip_state_init_missing">-loading testsubject-</string>
    <string name="init_skip_state_none">-loading testsubject-</string>
    <string name="intro_test_subject_name">-test subject-</string>
    <string name="intro_test_subject_estimated_intelligence">-intelligence-</string>
    <string name="intro_test_subject_gender_answer_male">Male</string>
    <string name="intro_test_subject_gender_answer_female">Female</string>
    <string name="intro_test_subject_gender_answer_whatever">Don\'t know</string>
    <string name="test_subject_0_name">Kid</string>
    <string name="test_subject_0_int">404</string>
    <string-array name="test_subject_0_intro_main">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
    <string-array name="test_subject_0_intro_nuts">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
    <string-array name="test_subject_0_riddle_solved_candy">
        <item>Good boy!</item>
        <item>Well done!</item>
    </string-array>
    <string name="test_subject_1_name">Kid</string>
    <string name="test_subject_1_int">Knows letters</string>
    <string name="riddles_dialog_positive">Confirm</string>
    <string name="riddle_dialog_tab_types">Types</string>
    <string name="riddle_dialog_tab_unsolved">Unsolved</string>
    <string name="riddle_type_circle">Grey Matter</string>
    <string name="riddle_type_circle_explanation">Touch one circle to pop them into 4 smaller ones until the image is visible.</string>
    <string-array name="riddle_type_circle_hints">
        <item>Touch circles to divide them.</item>
    </string-array>
    <string name="riddle_type_snow">Angry Cell</string>
    <string name="riddle_type_snow_explanation">Tilt the device and thus move the cell. Collect toxic candies, grow bigger, don\'t touch walls and EXPLODE.</string>
    <string-array name="riddle_type_snow_hints">
    </string-array>
    <string name="riddle_type_dice">Alien-Cube</string>
    <string name="riddle_type_dice_explanation">Create dices by touching an empty field. Move and combine dices with equal numbers to reveal the image.</string>
    <string-array name="riddle_type_dice_hints">
    </string-array>
    <string name="riddle_type_triangle">ColEdge</string>
    <string name="riddle_type_triangle_explanation">Press inside a triangle to create smaller ones.</string>
    <string-array name="riddle_type_triangle_hints">
    </string-array>
    <string name="riddle_type_jumper">Invasion</string>
    <string name="riddle_type_jumper_explanation">Touch to jump or keep pressed to doublejump over obstacles. Each one will slowly reveal the image</string>
    <string-array name="riddle_type_jumper_hints">
    </string-array>
    <string name="riddle_type_torchlight">Torchlight</string>
    <string name="riddle_type_torchlight_explanation">Something happens later</string>
    <string name="riddle_type_developer">Developer</string>
    <string name="riddle_type_developer_explanation">Hi self or brother.</string>
    <string name="panic_dialog_positive">All right</string>
    <string name="panic_ask_type">How does this work</string>
    <string name="panic_skip">Skip .. come back later</string>
    <string name="panic_cannot_skip">Brain .. full ... cannot .. remember more . riddles ...</string>
    <string name="panic_complain">I want to complain</string>
    <string-array name="panic_author_credit_title">
        <item>Admire the artist!</item>
        <item>Whose masterpiece is this?</item>
        <item>Marvel the creativity!</item>
        <item>Virtuosic  with brush and mouse:</item>
        <item>Super great human being:</item>
    </string-array>
    <string name="no_panic_title">Don\'t panic!</string>
    <string-array name="test_subject_1_intro_main">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
    <string-array name="test_subject_1_intro_nuts">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
    <string-array name="test_subject_1_riddle_solved_candy">
        <item>You\'re smart!</item>
        <item>Nice job!</item>
		<item>Well done Captain!</item>
    </string-array>
    <string-array name="test_subject_2_intro_main">
    </string-array>
    <string-array name="test_subject_2_intro_nuts">
    </string-array>
    <string-array name="test_subject_2_riddle_solved_candy">
    </string-array>
    <string-array name="test_subject_3_intro_main">
    </string-array>
    <string-array name="test_subject_3_intro_nuts">
    </string-array>
    <string-array name="test_subject_3_riddle_solved_candy">
    </string-array>
    <string-array name="test_subject_4_intro_main">
    </string-array>
    <string-array name="test_subject_4_intro_nuts">
    </string-array>
    <string-array name="test_subject_4_riddle_solved_candy">
    </string-array>
    <string-array name="test_subject_5_intro_main">
    </string-array>
    <string-array name="test_subject_5_intro_nuts">
    </string-array>
    <string-array name="test_subject_5_riddle_solved_candy">
    </string-array>
    <string-array name="test_subject_6_intro_main">
    </string-array>
    <string-array name="test_subject_6_intro_nuts">
    </string-array>
    <string-array name="test_subject_6_riddle_solved_candy">
    </string-array>
    <string-array name="test_subject_7_intro_main">
    </string-array>
    <string-array name="test_subject_7_intro_nuts">
    </string-array>
    <string-array name="test_subject_7_riddle_solved_candy">
    </string-array>
    <string-array name="test_subject_8_intro_main">
    </string-array>
    <string-array name="test_subject_8_intro_nuts">
    </string-array>
    <string-array name="test_subject_8_riddle_solved_candy">
    </string-array>
    <string-array name="test_subject_9_intro_main">
    </string-array>
    <string-array name="test_subject_9_intro_nuts">
    </string-array>
    <string-array name="test_subject_9_riddle_solved_candy">
    </string-array>
    <string name="handle_error_attempted">Bild nicht vorhanden?! Externen Speicher prüfen!</string>
    <string name="tongue_select_explanation">Sprache für Lösungswörter: %1$s</string>
    <string name="btn_open_shop">Shop</string>
    <string name="achievement_button">Achievements</string>
    <string name="btn_about">About &amp; Contact</string>
    <string name="btn_donate">Donate</string>
    <string name="btn_credits">Credits</string>
    <string name="about_contact_descr" translatable="false">Die App ist ein Freizeitprojekt von den Brüdern Fabian und Daniel, die ich stolz meine Schöpfer nennen darf. Daniel, mein Professor, und Fabian, mein Meister, haben ein Anti-Werbungs-Wurmloch installiert, das dich vor Pop-ups und Müll schützt. Über anderweitige Unterstützung freuen sie sich trotzdem!\nSchreib ihnen, schau dir das Projekt an unter \"https://github.com/DanDits/WhatsThat\" oder setze eine anonyme Spende ab.\n\nStay awesome! :)</string>
    <string-array name="contact_headings">
        <item>Suggest image</item>
        <item>Suggest riddle</item>
        <item>Report a bug</item>
        <item>Give Feedback</item>
        <item>Just saying hello</item>
        <item>Area 51</item>
        <item>Language and stuff</item>
    </string-array>
    <string-array name="contact_mail_subject">
        <item>Image suggestion</item>
        <item>Riddle suggestion</item>
        <item>I found a bug!</item>
        <item>Feedback</item>
        <item>Just saying hello</item>
        <item>\?!?</item>
        <item>Language and translations</item>
    </string-array>
</resources>